# Parallel-Programming-using-OpenMP-and-SIMD

./: CMakeLists.txt  CParallel.cpp  CParallel.h  Csequential.cpp  Csequential.h  Makefile  README.md  common.h  main.cpp  parallel_main.cpp  serial_main.cpp
part1/: CParallel.cpp  CParallel.h  Csequential.cpp  Csequential.h  parallel_main.cpp  serial_main.cpp
part2/: Makefile  simd.cpp
